update slither config -Naming-Convention: Does not correctly include -Timestamp: Loan.startTime not vulnerable to +/-900 second vulns

--- a/contracts/slither.config.json
+++ b/contracts/slither.config.json
@@ -1,5 +1,5 @@
 {
-  "detectors_to_exclude": "naming-convention",
+  "detectors_to_exclude": "naming-convention,timestamp",
   "solc_remaps": "@=../node_modules/@",
   "filter_paths": "(node_modules/|test/)"
 }
